<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/details_category" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- The input text field for the name of the item -->
                <EditText
                    android:id="@+id/input_name"
                    style="@style/UnitsStyle"
                    android:hint="@string/item_name"
                    android:inputType="textCapWords" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/increment_button" />

                <!-- The input text field for the number of items currently
               in stock -->
                <EditText
                    android:id="@+id/input_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:hint="@string/item_quantity"
                    android:inputType="number"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:textAppearance="?android:textAppearanceSmall" />

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/decrement_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="113dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <!-- The U.S. dollar icon for the price input field -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/price_dollar_sign"
                    android:textSize="17sp" />

                <!-- The input text field for the price of the item -->
                <EditText
                    android:id="@+id/input_price"
                    style="@style/UnitsStyle"
                    android:hint="@string/item_price"
                    android:inputType="number" />

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/editor_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="142dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_photo_button" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="142dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_button" />

    </LinearLayout>
</ScrollView>