<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            tools:text="Headphones" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/in_stock"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                android:textSize="18sp"
                tools:text="25" />

            <TextView
                android:id="@+id/in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_in_stock"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/dollar_sign"
                android:fontFamily="sans-serif"
                android:paddingLeft="5dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                android:textSize="20sp"
                tools:text="5" />

            <TextView
                android:id="@+id/dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_dollar_sign"
                android:textSize="20sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/sale_button"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/sale_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/edit_button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/list_layout"
        android:src="@mipmap/ic_launcher"/>

    </RelativeLayout>
</LinearLayout>